--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   simple_animations: ^1.3.3
   lottie: ^1.2.1
+  animate_do: ^3.0.2
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
