--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  simple_animations: ^1.3.3
   lottie: ^1.2.1
   animate_do: ^3.0.2
   iconsax: ^0.0.8
+  dropdown_search: ^3.0.1
 
 dev_dependencies:
   flutter_test:
