--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animate_do: ^3.0.2
   iconsax: ^0.0.8
   dropdown_search: ^3.0.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
